# looped-jepa

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  REPORT.md  REPRODUCTION.md  app.py  portfolio_notes.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: image_jepa_cifar10.yaml  image_jepa_cifar10_looped.yaml  image_jepa_cifar10_looped_signal.yaml  image_jepa_cifar10_ouro_looped.yaml  image_jepa_cifar10_signal.yaml  image_jepa_cifar10_small.yaml  image_jepa_cifar10_tiny_normfix.yaml  image_jepa_cifar10_v2.yaml  image_jepa_cifar10_v2b.yaml  image_jepa_cifar10_v3.yaml  image_jepa_cifar10_v3_looped.yaml  image_jepa_cifar10_v3_looped_1ep.yaml  image_jepa_cifar10_v4.yaml  image_jepa_cifar10_v5.yaml  image_jepa_cifar10_vicreg.yaml  image_jepa_ouro_looped.yaml  ouro_smoke.yaml  smoke_test.yaml  v2_smoke.yaml  v4_smoke.yaml  v5_smoke.yaml  verify.yaml
demo/: README.md  __init__.py  inference.py  render.py
docs/: CODE_REVIEW.md  IJEPA_Looped_Predictor_Report.md  TECHNICAL_REPORT.md  ablation_looped.md  looped_v3_comparison.md
github_review/: FILE_MANIFEST.txt  README.md  portfolio_notes.md
model_cards/: README.md  transfer.md  v3_baseline.md  v3_looped.md
results/: README.md
scripts/: README.md  ablation_loops.py  ablation_watch_loop.sh  compare_baseline.py  compare_looped_v3.py  download_roboflow.py  generate_looped_performance_review.py  gradio_demo.py  linear_probe.py  monitor_ablations.py  reprobe_tuned.py  run_ablations.py  run_visualizations_overnight.sh  train_jepa.py  transfer_probe.py  transfer_roboflow.py  verify_install.py  visualize.py
(+60 files in other folders)
