[project]
name = "jepa-ouro"
version = "0.1.0"
description = "I-JEPA-style image model with Ouro looped predictor adaptation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
demo = ["gradio>=4.0.0"]
viz = ["scikit-learn>=1.4.0"]
transfer = ["roboflow>=1.1.0", "scikit-learn>=1.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jepa"]

[tool.hatch.build.targets.wheel.sources]
"src/jepa" = "jepa"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
